<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout_add_score"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <Spinner
            android:id="@+id/spinner_second_team"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="22dp"/>

        <Spinner
            android:id="@+id/spinner_first_team"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="false"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="22dp"
            android:layout_marginTop="32dp" />

        <EditText
            android:id="@+id/editText_score_first_team"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_second_team"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="number"
            android:nextFocusForward="@id/editText_score_second_team"
            android:textAlignment="center"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/editText_score_second_team"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_first_team"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:imeOptions="actionDone"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/spinner_second_team"
            android:layout_toEndOf="@+id/spinner_first_team"
            android:text="@string/goals_divider"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:visibility="visible"
            tools:text="@string/goals_divider" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/editText_score_second_team"
            android:layout_toEndOf="@+id/editText_score_first_team"
            android:text="@string/goals_divider"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:text="@string/goals_divider"/>

    </RelativeLayout>


    <Button
        android:id="@+id/button_save_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_container"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:accessibilityHeading="false"
        android:text="@string/button_save" />
</RelativeLayout>