...
    android:orientation="vertical">

    <Button
        android:id="@+id/button_add_team"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_add_score"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="8dp"
...
